# clawmint

./: .dockerignore  .gitignore  ARQUITECTURA.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  docker-entrypoint.sh
.claude/: settings.local.json
.githooks/: commit-msg  pre-commit  pre-push
client/: .env.local.example  .env.production  CSS_MODULES_ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
docs/: CLIENT_ROADMAP.md  PACKAGING.md  README.md  architecture.md  development-rules.md  docker.md  engineering-craftsmanship.md  ia-local.md  mejoras.md  p2p.md  philosophy.md  roadmap.md  servidor.md  setup.md  vision.md
documentacion/: cliente.md  memoria.md
implementar/: CONVERSATION_COMPACTION_PLAN.md  FIX_STREAMING_TURNOS_ANTERIORES.md  INSTALADOR_PKG.md  MEJORAS_CALIDAD.md  MEMORY_SYSTEM_PLAN.md  TASK_SCHEDULER.md  WEB_CHANNEL_PLAN.md  openclaw-gaps.md
packaging/tauri/: Cargo.toml  tauri.conf.json
packaging/tauri/capabilities/: default.json
packaging/tauri/src/: main.rs
server/: .env.example  .gitignore  ROADMAP.md  agents.js  agents.json  bootstrap.js  bots.example.json  bots.json  ecosystem.config.js  embeddings.js  index.js  mcp-client-pool.js  mcp-config.json  mcp-system-prompt.txt  mcps.js  memory-consolidator.js  memory.js  nodemon.json  nodriza-config.js  nodriza-config.json  nodriza.js  package-lock.json  package.json  paths.js  provider-config.js  provider-config.json  reminders.js  run-claude.sh  scheduler.js  sessionManager.js  skills.js  telegram.js  test-err.txt  tools.js  (+8 more)
(+606 files in other folders)
